Added nickserv authentication plugin
--HG--
rename : config.xml => config.xml.dist
extra : convert_revision : svn%3A07b5d564-ebd0-481b-8db0-eb002ad754c2/trunk%4061

--- a/config.xml.dist
+++ b/config.xml.dist
@@ -9,4 +9,8 @@
         <hostname>irc.freenode.net</hostname>
         <port>8000</port>
     </server>
+    <nickserv>
+        <username></username>
+        <password></password>
+    </nickserv>
 </config>
