--- a/config.xml.dist
+++ b/config.xml.dist
@@ -2,7 +2,7 @@
 <config>
     <common>
         <nickname>DBV5</nickname>
-        <username>DBV5@dasprids.de</username>
+        <username>DBV5</username>
         <prefix>!</prefix>
     </common>
     <server>
