Adds redmine plugin

--- a/config.xml.dist
+++ b/config.xml.dist
@@ -13,4 +13,8 @@
         <username></username>
         <password></password>
     </nickserv>
+    <redmine>
+      <domain>http://redmine.test.com/</domain>
+      <apiKey>...</apiKey>
+    </redmine>
 </config>
